<resources>
    <string name="app_name">shakey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmenttext">Shaking detected</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="textview">Area for alpha calculation</string>
    <string name="button">Click to stop</string>
    <string name="textsensors">Sensor data will go here\n</string>
</resources>