<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.shakey.BlankFragment"
        android:layout_width="411dp"
        android:layout_height="843dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="326dp"
        android:layout_height="249dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/b798419a57d85091448e0b244805e7cb843dd21084f05da6c21fd10e45c206cf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.308"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="187dp"
        android:layout_height="157dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.137"
        app:srcCompat="@drawable/img_0594" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.064" />

    <LinearLayout
        android:layout_width="149dp"
        android:layout_height="216dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.176"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/textsensors"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/textview"
            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>